tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PassiveChunkload-AAAAAAAAAAAAAAAAAAAEnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1180,
  "prerequisites": [
    1081
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Using the MV bender you can finally press dense plates. So let's craft a passive chunkloader. It will also load a 3x3 chunk area. You need ender pearls or coins to power the chunkloader.\n\nPassive anchors will run for 1 hour off of an ender pearl, and a varying amount depending on the coin used.\n\n§aPersonal Anchors§r are loaded once the owner visits, and stay loaded while the player is logged in.\n\n§9Passive Anchors§r are loaded once the owner visits, and stay loaded until the server resets.\n\n[warn]World Anchors[/warn] are always loaded, even after a server reset.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPassive Chunkloading",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1081
  ],
  "rewards": [],
  "tasks": []
}
