tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PipesPipesEveryw-AAAAAAAAAAAAAAAAAAAGyA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1736,
  "prerequisites": [
    740
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you're in MV, you'll want to start automating processes. Polyethylene, Oxygen, Nitrogen, Hydrogen, Rubber, Charcoal, etc. Faster item pipes will help with transporting items quicker around your base. For now, use your spiffy new extruder to craft some brass item pipes.\n\nThe reward - restrictive item pipes - allow you to prioritize destinations. Locations on the other side of a restrictive pipe are treated as much further away than locations on the same side of a pipe. Very handy when you want overflow (or non-matching) items to go somewhere else!\n\nFor higher tiers, look up \"item pipe\" in NEI, or just look at the spreadsheet.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPipes, Pipes Everywhere",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    740
  ],
  "rewards": [],
  "tasks": []
}
