tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PlantMass-AAAAAAAAAAAAAAAAAAAC3A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 732,
  "prerequisites": [
    731
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Macerate the plantballs down to plant mass for better processing. The HV macerator has an extra slot so you can get more, but it's not worth it power-wise, same for EV and IV.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPlant Mass",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    731
  ],
  "rewards": [],
  "tasks": []
}
