tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PolyvinylChlorid-AAAAAAAAAAAAAAAAAAAHUQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1873,
  "prerequisites": [
    1872
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Polyvinyl Chloride is PVC which can be used for the PVC Pipes. You need Vinyl Chloride and Oxygen to make it. You'll also want it for SMD capacitors later.\n\nDo the recipe twice if you want to clean out your reactor, or three times if used the eight second recipe.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPolyvinyl Chloride",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1872
  ],
  "rewards": [],
  "tasks": []
}
