tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PortableProspect-AAAAAAAAAAAAAAAAAAAFyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1482,
  "prerequisites": [
    1477
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have some tech, you've discovered a way to prospect for ores.\n\nUnfortunately, the tech to make it repairable or rechargeable doesn't work, so you'll have to make a new one each time it breaks. It does work better at higher tiers and lasts longer with better materials.\n\nIt doesn't make a convenient book like the Seismic Prospector, but you can look at the results of scanning on the map, thanks to Visual Prospecting.\n\nIt can be hard to choose a good material for the Basic Prospector. Here are some good choices for you in their respective tiers, the size searched, and the average amount of veins they can scan:\n\nLV Vanadiumsteel 3x3 - 50\nMV Vanadiumsteel 3x3 - 213\nHV Vibrant Alloy 5x5 - 299\nEV Shadow Metal 7x7 - 1080\nIV Oriharukon 7x7 - 2649\n\nAs you can see, the prospectors become better and better with each tier, but it might also be worth looking around for better materials.\n\nGood luck.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPortable Prospecting Tool",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1477
  ],
  "rewards": [],
  "tasks": []
}
