tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PortableTanks-AAAAAAAAAAAAAAAAAAAAgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 130,
  "prerequisites": [
    129
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Until now, you had to use buildcraft tanks with dollies to carry liquids around. Which can be a pain with all that slowness. These portable tanks from EnderIO are able to push and pull liquids by themselves, as they have a built-in pump which is powered by some magic energy source. How convenient.\n\nThe pressurized versions are twice as large.\n\n[note]Just be careful, because it will eat water cells instead of returning them.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPortable Tanks",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    129
  ],
  "rewards": [],
  "tasks": []
}
