tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__PressAlltheThing-AAAAAAAAAAAAAAAAAAAGCw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1547,
  "prerequisites": [
    896
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the MV forming press you can make aluminum iron plates for solar panels, turbine blades for turbines and some items for Logistics Pipes.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lPress All the Things in MV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    896
  ],
  "rewards": [],
  "tasks": []
}
